// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parentreference argument (uppercase) 1`] = `
Program {
  "children": Array [
    _Function {
      "arguments": Array [
        Parameter {
          "byref": false,
          "kind": "parameter",
          "name": Identifier {
            "kind": "identifier",
            "name": "arg",
          },
          "nullable": false,
          "type": ParentReference {
            "kind": "parentreference",
            "raw": "PARENT",
          },
          "value": null,
          "variadic": false,
        },
      ],
      "body": Block {
        "children": Array [],
        "kind": "block",
      },
      "byref": false,
      "kind": "function",
      "name": Identifier {
        "kind": "identifier",
        "name": "foo",
      },
      "nullable": false,
      "type": null,
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`parentreference argument 1`] = `
Program {
  "children": Array [
    _Function {
      "arguments": Array [
        Parameter {
          "byref": false,
          "kind": "parameter",
          "name": Identifier {
            "kind": "identifier",
            "name": "arg",
          },
          "nullable": false,
          "type": ParentReference {
            "kind": "parentreference",
            "raw": "parent",
          },
          "value": null,
          "variadic": false,
        },
      ],
      "body": Block {
        "children": Array [],
        "kind": "block",
      },
      "byref": false,
      "kind": "function",
      "name": Identifier {
        "kind": "identifier",
        "name": "foo",
      },
      "nullable": false,
      "type": null,
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`parentreference call 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Call {
        "arguments": Array [],
        "kind": "call",
        "what": StaticLookup {
          "kind": "staticlookup",
          "offset": Identifier {
            "kind": "identifier",
            "name": "call",
          },
          "what": ParentReference {
            "kind": "parentreference",
            "raw": "parent",
          },
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`parentreference constant 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": StaticLookup {
        "kind": "staticlookup",
        "offset": Identifier {
          "kind": "identifier",
          "name": "CONSTANT",
        },
        "what": ParentReference {
          "kind": "parentreference",
          "raw": "parent",
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`parentreference return type declarations (uppercase) 1`] = `
Program {
  "children": Array [
    _Function {
      "arguments": Array [
        Parameter {
          "byref": false,
          "kind": "parameter",
          "name": Identifier {
            "kind": "identifier",
            "name": "arg",
          },
          "nullable": false,
          "type": null,
          "value": null,
          "variadic": false,
        },
      ],
      "body": Block {
        "children": Array [],
        "kind": "block",
      },
      "byref": false,
      "kind": "function",
      "name": Identifier {
        "kind": "identifier",
        "name": "foo",
      },
      "nullable": false,
      "type": ParentReference {
        "kind": "parentreference",
        "raw": "PARENT",
      },
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`parentreference return type declarations 1`] = `
Program {
  "children": Array [
    _Function {
      "arguments": Array [
        Parameter {
          "byref": false,
          "kind": "parameter",
          "name": Identifier {
            "kind": "identifier",
            "name": "arg",
          },
          "nullable": false,
          "type": null,
          "value": null,
          "variadic": false,
        },
      ],
      "body": Block {
        "children": Array [],
        "kind": "block",
      },
      "byref": false,
      "kind": "function",
      "name": Identifier {
        "kind": "identifier",
        "name": "foo",
      },
      "nullable": false,
      "type": ParentReference {
        "kind": "parentreference",
        "raw": "parent",
      },
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`parentreference uppercase 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Call {
        "arguments": Array [],
        "kind": "call",
        "what": StaticLookup {
          "kind": "staticlookup",
          "offset": Identifier {
            "kind": "identifier",
            "name": "call",
          },
          "what": ParentReference {
            "kind": "parentreference",
            "raw": "PARENT",
          },
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`parentreference variable 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": StaticLookup {
        "kind": "staticlookup",
        "offset": Variable {
          "curly": false,
          "kind": "variable",
          "name": "var",
        },
        "what": ParentReference {
          "kind": "parentreference",
          "raw": "parent",
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;
